First post-reorg doc updates

--- a/README
+++ b/README
@@ -4,11 +4,12 @@ Welcome to Lumen!
 
 Lumen is (or will be someday) a GUI toolkit for Ada.
 
-It is written entirely in Ada (with a few insignificant exceptions,
-like in the Linux joystick code, no direct calling of ioctl from Ada
-yet), based on OpenGL and thus expected to be portable across OS's
-once somebody steps up and writes the low-level portions for
-MS-Windows and OS-X.
+It is written entirely in Ada (with a few insignificant exceptions, like in
+the Linux joystick code, no direct calling of ioctl from Ada yet), based on
+OpenGL and thus expected to be portable across OS's (currently runs on X11
+sytems like Linux and the *BSD's, and on Win32 systems like MS-Windows NT and
+7).  Once somebody steps up and writes the low-level portions for OS-X, it
+will run there too.
 
 The root of the documentation source is "doc/index.markdown".  The
 formatted docs should be available here:
@@ -20,6 +21,12 @@ Enjoy, and visit the public git repository at either of these two places:
    git://ftp.niestu.com/lumen
    https://github.com/karakalo/Lumen
 
+There are a number of simple demo applications that show off various aspects
+of Lumen; they are available here:
+
+   git://ftp.niestu.com/lumen-demos
+   https://github.com/karakalo/lumen-demos
+
 --
 Chip Richards
-12 May 2011
+23 January 2013
